
- New status bar widget design (Matthieu Casanova #1540560)

- New Encodings option pane using drag & drop (Matthieu Casanova)

- Parsing buffer local properties is limited to the first 10000 characters of
  the first and last 10 lines. This is a performance enhancement when loading
  buffers containing very long lines (Matthieu Casanova)

. Added a new option to perform font substitution in the text area when the
  current configured font can't display characters in the buffer. It's disabled
  by default, and can be enabled in the text area option pane, along with the
  option to choose preferred fonts for substitution. This makes reading files
  which contain text in multiple scripts more bearable. (Marcelo Vanzin)

- Fixed ModeCatalogHandler so if an edit mode in the user-specific catalog has
  the same name as an edit mode in the system catalog, the version in the
  user-specific catalog will override the system default.  This is what the
  documentation for writing an edit mode has stated is true for some time, now
  it is. (Dale Anson)

- Gave better priorities within modes which matches with a file at the
  same time, as the following order:
  - exact filename match
  - both the filename glob and the first line glob
  - only the filename glob
  - the first line glob  (Dale Anson)

- In status bar option pane, when adding a widget only widgets that are not
  already in the bar will be proposed (Matthieu Casanova feature #2937286)

- Added jedit.exe in the Windows installer, so that users can invoke
  jEdit more like a native application.
  (Feature Request #2661227, Patch #2984552 - Hisateru Tanaka)

- Added some more encoding detectors as default. (Kazutoshi Satoda)

- Extended the scope of the workaround for a bug in Sun (and Apple) JVM 5
  to cover IBM JVM because the same problem was reported on it.
  (SF.net bug #3006686 - Kazutoshi Satoda)

}}}

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: